# picklejson

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
git_hooks/: commit-msg  pre-commit
picklejson/: __init__.py  context.py  decoder.py  decorator.py  encoder.py  functions.py  interfaces.py
scripts/: add_changelog.py
tests/: conftest.py  test_context.py  test_deserialize.py  test_serialize.py
